// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager #initialize gas cost 1`] = `
Object {
  "calldataByteLength": 196,
<<<<<<< HEAD
  "gasUsed": 71236,
=======
  "gasUsed": 71309,
>>>>>>> 8e75ecd (pr feedback)
}
`;

exports[`PoolManager #lock gas overhead of no-op lock 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 41718,
}
`;

exports[`PoolManager #mint gas cost 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 310400,
}
`;

exports[`PoolManager #mint gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 314521,
=======
  "gasUsed": 310357,
>>>>>>> 8e75ecd (pr feedback)
}
`;

exports[`PoolManager #swap gas cost 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 71028,
}
`;

exports[`PoolManager #swap gas cost for swap against liquidity 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 203221,
}
`;

exports[`PoolManager #swap gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 260,
<<<<<<< HEAD
  "gasUsed": 75268,
}
`;

exports[`PoolManager bytecode size 1`] = `21188`;
=======
  "gasUsed": 75062,
}
`;

exports[`PoolManager bytecode size 1`] = `21627`;
>>>>>>> 8e75ecd (pr feedback)
